# Boltzmann-Fourier-Spectral-Method

./: CMakeLists.txt  LICENSE  README.md  cufft_benchmark.cu  fftw_benchmark.cpp  loop_benchmark_cpu.cpp  loop_benchmark_gpu.cpp  loop_benchmarks_cpu.cpp  maxwell_bkw_cuda.cu  maxwell_bkw_fftw.cpp  slurm_run_fftw_benchmark.sb  slurm_run_loop_benchmark.sb  slurm_run_loop_benchmark_cpu.sb  slurm_run_maxwell_bkw_fftw.sb
Collisions/: AbstractCollisionOperator.hpp  BoltzmannCUDAKernels.cu  BoltzmannCUDAKernels.hpp  BoltzmannOperator.hpp  CMakeLists.txt  CUDABoltzmannOperator.cu  CUDABoltzmannOperator.hpp  FFTWBoltzmannOperator.cpp  FFTWBoltzmannOperator.hpp
Quadratures/: AbstractQuadrature.hpp  AbstractSphericalQuadratures.hpp  CMakeLists.txt  GaussLegendre.hpp  SphericalDesign.cpp  SphericalDesign.hpp
Results/: fftw_benchmark_data.txt  loop_benchmark_cpu_data_std.txt  maxwell_bkw_fftw_atomics.txt  maxwell_bkw_naive_run.txt
Utilities/: CMakeLists.txt  MultiDimIndexer.hpp  constants.hpp
